# lineage-sre

./: .env.example  .gitignore  README.md  pyproject.toml
demo/models/: churn_features.sql  fct_daily_revenue.sql  stg_customers.sql  stg_payments.sql
docs/: demo-video-script.md
examples/: fix_stg_payments.sql  rca_report_example.md
src/lineage_sre/: __init__.py  agent.py  agent_gemini.py  agent_sdk.py  cli.py  config.py  datahub_client.py  demo_stack.py  mcp_bridge.py  tools.py  warehouse.py
