[project]
name = "lineage-sre"
version = "0.1.0"
description = "Autonomous incident-response agent for data pipelines, powered by DataHub lineage and metadata."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "anthropic>=0.40",
    "acryl-datahub>=0.14.1",
    "duckdb>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "claude-agent-sdk>=0.2.112",
    "google-genai>=2.8.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.2",
    "mcp-server-datahub>=0.4",
]

[project.scripts]
lineage-sre = "lineage_sre.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lineage_sre"]
